
Changelog for Structure Synth:
------------------------------

----- Release of v0.9.0 (Glasnost) [23 Jan 2009 ] ----------------------------------------------------------
This release: 33 hours of work (30 hours coding + 3 hours non-coding). 15 log entries.
Stats total: 166 hours of work (122 hours coding + 44 hours non-coding). 85 log entries.


23 Jan 09 [MHC] Created builds and updated webpages.
[2hA]

21 Jan 09 [MHC] Template Renderer: Missing primitives no longer cancels the renderer
[2h]            OpenGL renderer now turns off GLWidget when rendering...
                Add 'FastRotate' button. 

20 Jan 09 [MHC] Fixed CR+CR+LF export bug.
[3h]            Fixed infoText bg color.
				Removed 'copied to clipboard' info text for file renders.
				Update info text to correct ALT modifier for fast draw.
				Enabled the Cut,Paste,Copy main menu (this did not work before :-))				

19 Jan 09 [MHC] More Cam Export stuff. Now works with more aspect ratios. Added the following exports to the 'begin' template:
[1h]			{fov},{aspect},{width} {height} [Width and Height being the size of the OpenGL viewport, aspect their proprotion and fov=29*aspect (pretty close for SunFlow export)]

18 Jan 09 [MHC] Added Camera Export. Now in the 'begin' template, it is possible to do stuff like:
[5h]			   eye    {CamPosX} {CamPosY} {CamPosZ}
				   target {CamTargetX} {CamTargetY} {CamTargetZ}
				   up     {CamUpX} {CamUpY} {CamUpZ}
				   fov    29
				When resizing OpenGL window, width/height/a.r. is shown.
				Removed an extensive memoryleak (leaked 16 bytes per created state).
			 
14 Jan 09 [MHC] Updated web page
[1h+1hA]        More work on the GUI editors.

5  Jan 09 [MHC] Corrected some syntax highlighter bugs...
[1h]

4  Jan 09 [MHC] Restored GCC/Linux code compatibility. (Some header paths were invalid)
[1h]

3  Jan 09 [MHC] Implemented a 'Triangle'. E.g.: 'Triangle[0,0,0;1,0,0;0.5,0.5,0.5]' is now a valid primitive.
[3h]
