@@ -2,6 +2,11 @@
 Changelog for Structure Synth:
 ------------------------------
 
+29 Jan 09 [MHC] Added support for specifying a startup .es file on the Commandline (this makes file associations possible). Notice this should work with Unicode paths.
+                Added support for drag'and'drop (drop a .es file onto the clipboard...)
+                -> TODO: Check on Linux/Mac.
+                BugFix: The scroll can now be used to zoom again.
+
 ----- Release of v0.9.0 (Glasnost) [23 Jan 2009 ] ----------------------------------------------------------
 This release: 33 hours of work (30 hours coding + 3 hours non-coding). 15 log entries.
 Stats total: 166 hours of work (122 hours coding + 44 hours non-coding). 85 log entries.
